# wagtail-sb-material

./: .gitignore  LICENSE.txt  prepare  pyproject.toml  requirements.test.conda  requirements.test.pip  setup.py
package/softbutterfly/wagtail/: wagtail_hooks.py
package/softbutterfly/wagtail/materialize/: __init__.py  apps.py
package/softbutterfly/wagtail/materialize/models/: __init__.py  base.py  buttons.py  cards.py  content_streams.py  footer.py  grid.py  helpers.py  multimedia.py  pages.py  parallax.py  section.py  typography.py
package/softbutterfly/wagtail/materialize/templatetags/: materialize.py  wagtail_materialize.py
settings/: requirements.conda  requirements.pip
softbutterfly/wagtail/materialize/: apps.py
softbutterfly/wagtail/materialize/models/: base.py  branding.py  cards.py  content_streams.py  grid.py  media.py  parallax.py  sections.py  typography.py
softbutterfly/wagtail/materialize/templates/wagtail/materialize/: parallax-page.html  starter.html
softbutterfly/wagtail/materialize/templatetags/: wagtailmaterialize_tags.py
test/: wagtail_sb_material
test/test/: settings.py  urls.py
wagtail_sb_material/: apps.py  wagtail_hooks.py
wagtail_sb_material/models/: base.py  branding.py  buttons.py  cards.py  footer.py  helpers.py  media.py  pages.py  parallax.py  sections.py  typography.py
wagtail_sb_material/templates/wagtail/materialize/: base.html
wagtail_sb_material/templates/wagtail/materialize/components/: card-action.html  card.html  parallax.html  typography.html
wagtail_sb_material/templatetags/: wagtailmaterialize_tags.py
(+31 files in other folders)
